erDiagram
    ANPR_PLATE_CAPTURES ||--o{ ANPR_ANOMALY_EVENTS : "anpr_anomaly_events.capture_id -> anpr_plate_captures.id"
    CAMERAS ||--o{ ANPR_PLATE_CAPTURES : "anpr_plate_captures.camera_id -> cameras.id"
    ENTRY_LOGS ||--o{ ANPR_PLATE_CAPTURES : "anpr_plate_captures.entry_log_id -> entry_logs.id"
    GATES ||--o{ ANPR_PLATE_CAPTURES : "anpr_plate_captures.gate_id -> gates.id"
    USERS ||--o{ ANPR_PLATE_CAPTURES : "anpr_plate_captures.recorded_by -> users.id"
    VEHICLES ||--o{ ANPR_PLATE_CAPTURES : "anpr_plate_captures.vehicle_id -> vehicles.id"
    USERS ||--o{ BLACKLIST_RECORDS : "blacklist_records.added_by -> users.id"
    VEHICLES ||--o{ BLACKLIST_RECORDS : "blacklist_records.vehicle_id -> vehicles.id"
    CAMERAS ||--o| CAMERA_SETTINGS : "camera_settings.camera_id -> cameras.id"
    GATES ||--o{ CAMERAS : "cameras.gate_id -> gates.id"
    SECURITY_SHIFTS ||--o{ DUTY_LOGS : "duty_logs.shift_id -> security_shifts.id"
    USERS ||--o{ DUTY_LOGS : "duty_logs.user_id -> users.id"
    CAMERAS ||--o{ ENTRY_LOGS : "entry_logs.camera_id -> cameras.id"
    GATES ||--o{ ENTRY_LOGS : "entry_logs.gate_id -> gates.id"
    USERS ||--o{ ENTRY_LOGS : "entry_logs.user_id -> users.id"
    VEHICLES ||--o{ ENTRY_LOGS : "entry_logs.vehicle_id -> vehicles.id"
    GATES ||--o{ VISITORS : "visitors.gate_id -> gates.id"
    USERS ||--o{ NOTIFICATIONS : "notifications.user_id -> users.id"
    USERS ||--o{ OCR_SCANS : "ocr_scans.user_id -> users.id"
    USERS ||--o{ OCR_SCANS : "ocr_scans.verified_by -> users.id"
    USERS ||--o{ SECURITY_SHIFTS : "security_shifts.user_id -> users.id"
    USERS ||--o{ SYSTEM_LOGS : "system_logs.actor_id -> users.id"
    USERS ||--o{ VEHICLES : "vehicles.approved_by -> users.id"
    USERS ||--o{ VEHICLES : "vehicles.user_id -> users.id"
    ENTRY_LOGS ||--o{ VIOLATIONS : "violations.entry_log_id -> entry_logs.id"
    USERS ||--o{ VIOLATIONS : "violations.resolved_by -> users.id"
    VEHICLES ||--o{ VIOLATIONS : "violations.vehicle_id -> vehicles.id"
    VISITORS ||--o{ VISITOR_VEHICLES : "visitor_vehicles.visitor_id -> visitors.id"
    USERS ||--o{ VISITORS : "visitors.created_by -> users.id"
    USERS ||--o{ VISITORS : "visitors.host_user_id -> users.id"
    ANPR_CAMERA_CONFIG ||..o{ DETECTED_VEHICLES : "detected_vehicles.camera_id -> anpr_camera_config.camera_id (logical)"
    VEHICLES ||..o{ DETECTED_VEHICLES : "detected_vehicles.normalized_plate_text -> vehicles.plate_number (logical)"

    USERS {
        uuid id PK
        varchar email UK
        varchar username UK
        enum role
        enum status
        varchar full_name GEN
        uuid registration_token UK
    }

    VEHICLES {
        uuid id PK
        uuid user_id FK
        uuid approved_by FK
        varchar plate_number UK
        enum type
        enum status
        boolean is_on_campus
    }

    GATES {
        uuid id PK
        varchar name
        enum status
    }

    CAMERAS {
        uuid id PK
        uuid gate_id FK
        varchar name
        enum direction
        boolean is_active
        boolean is_streaming
    }

    CAMERA_SETTINGS {
        uuid id PK
        uuid camera_id FK/UK
        integer detection_threshold
        enum recording_mode
        boolean ai_night_vision
    }

    ENTRY_LOGS {
        uuid id PK
        uuid camera_id FK
        uuid gate_id FK
        uuid vehicle_id FK
        uuid user_id FK
        varchar detected_plate_number
        enum direction
        varchar authorization_status
        timestamptz timestamp
    }

    ANPR_PLATE_CAPTURES {
        uuid id PK
        uuid camera_id FK
        uuid gate_id FK
        uuid vehicle_id FK
        uuid recorded_by FK
        uuid entry_log_id FK
        varchar plate_normalized
        enum alert_kind
        numeric confidence_score
    }

    ANPR_ANOMALY_EVENTS {
        uuid id PK
        uuid capture_id FK
        enum kind
        varchar status
        timestamptz created_at
    }

    VIOLATIONS {
        uuid id PK
        uuid entry_log_id FK
        uuid vehicle_id FK
        uuid resolved_by FK
        enum type
        varchar status
    }

    BLACKLIST_RECORDS {
        uuid id PK
        uuid vehicle_id FK
        uuid added_by FK
        text reason
        boolean is_active
    }

    VISITORS {
        uuid id PK
        uuid host_user_id FK
        uuid gate_id FK
        uuid created_by FK
        varchar full_name
        timestamptz check_in_at
        timestamptz check_out_at
    }

    VISITOR_VEHICLES {
        uuid id PK
        uuid visitor_id FK
        varchar plate_number
        enum type
    }

    SECURITY_SHIFTS {
        uuid id PK
        uuid user_id FK
        varchar badge_id
        enum duty_status
        varchar assigned_post
        time shift_start
        time shift_end
    }

    DUTY_LOGS {
        uuid id PK
        uuid shift_id FK
        uuid user_id FK
        timestamptz clock_in
        timestamptz clock_out
        integer vehicles_logged
    }

    NOTIFICATIONS {
        uuid id PK
        uuid user_id FK
        varchar title
        varchar type
        boolean is_read
    }

    OCR_SCANS {
        uuid id PK
        uuid user_id FK
        uuid verified_by FK
        varchar scan_type
        boolean is_verified
        numeric confidence_score
    }

    SYSTEM_LOGS {
        uuid id PK
        uuid actor_id FK
        varchar action
        enum category
        timestamptz created_at
    }

    SETTINGS {
        varchar key PK
        jsonb value
        text description
        timestamptz updated_at
    }

    ANPR_CAMERA_CONFIG {
        integer id PK
        integer camera_id UK
        varchar camera_name
        varchar camera_type
        varchar camera_source
        varchar gate_id
        boolean is_active
    }

    DETECTED_VEHICLES {
        integer id PK
        varchar detection_id UK
        integer camera_id
        varchar plate_number
        varchar normalized_plate_text
        varchar vehicle_type
        double plate_confidence
        boolean is_authorized
    }
